added functionality to start and stop timer

--- a/pomodoro-app/index.html
+++ b/pomodoro-app/index.html
@@ -27,10 +27,12 @@
           </div>
         </div>
         <button class="start">start</button>
+        <button class="pause hidden">pause</button>
         <button class="settings">
           <img src="images/gear.svg" alt="Settings" />
         </button>
       </div>
     </div>
+    <script src="scripts.js"></script>
   </body>
 </html>
